--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrador",
     "Password": "Contrase\u00f1a",
     "DeleteImage": "Eliminar imagen",
-    "MessageThankYouForSupporting": "Gracias por apoyar Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Por favor apoya Media Browser.",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "\u00bfEst\u00e1 seguro de querer eliminar esta imagen?",
     "FileReadCancelled": "La lectura del archivo ha sido cancelada.",
     "FileNotFound": "Archivo no encontrado.",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Gracias. Su clave de aficionado ha sido eliminada.",
     "ErrorLaunchingChromecast": "Hubo un error iniciando chromecast. Por favor aseg\u00farate de que tu dispositivo este conectado a tu red inalambrica",
     "MessageErrorLoadingSupporterInfo": "Se present\u00f3 un error al cargar la informaci\u00f3n del aficionado. Por favor int\u00e9ntelo m\u00e1s tarde.",
-    "MessageLinkYourSupporterKey": "Ligue su clave de aficionado con hasta {0} miembros de Media Browser Connect para disfrutar de acceso gratuito a las siguientes apps:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Eliminar Usuario",
     "MessageSwipeDownOnRemoteControl": "Bienvenido a control remoto. Deslice hacia abajo en cualquier parte de esta pantalla para regresar al sitio anterior.",
     "MessageConfirmRemoveConnectSupporter": "\u00bfEst\u00e1 seguro de querer eliminar los beneficios adicionales de aficionado de este usuario?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "Esta operaci\u00f3n normalmente es ejecutada autom\u00e1ticamente como una tarea programada. Tambi\u00e9n puede ser ejecutada manualmente desde aqu\u00ed. Para configurar la tarea programada, vea:",
     "HeaderSupporterBenefit": "La membres\u00eda de aficionado proporciona beneficios adicionales tales como acceso a sincronizaci\u00f3n, complementos premium, contenido de canales de Internet y m\u00e1s. {0}Conocer m\u00e1s{1}.",
     "LabelSyncNoTargetsHelp": "Parece que actualmente no cuentas con ninguna app que soporte sinc.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Bienvenido al Panel de Control de Media Browser",
-    "HeaderWelcomeToMediaBrowserWebClient": "Bienvenido al Cliente Web de Media Browser",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Haga el recorrido",
     "HeaderWelcomeBack": "\u00a1Bienvenido nuevamente!",
     "TitleSync": "Sinc",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Por favor selecciona al menos un elemento.",
     "MessagePleaseSelectTwoItems": "Por favor selecciona al menos dos elementos.",
     "MessageTheFollowingItemsWillBeGrouped": "Los siguientes t\u00edtulos ser\u00e1n agrupados en un solo elemento.",
-    "MessageConfirmItemGrouping": "Los clientes de Media Browser elegir\u00e1n autom\u00e1ticamente la versi\u00f3n optima para reproducir basado en el dispositivo y el rendimiento de redo. \u00bfEst\u00e1 seguro de querer continuar?",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "Continuar",
     "HeaderMyViews": "Mis Vistas",
     "HeaderLibraryFolders": "Carpetas de Medios",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Resultado: {0}",
     "HeaderRestart": "Reiniciar",
     "HeaderShutdown": "Apagar",
-    "MessageConfirmRestart": "\u00bfEst\u00e1 seguro de querer reiniciar el Servidor de Media Browser?",
-    "MessageConfirmShutdown": "\u00bfEst\u00e1 seguro de querer apagar el Servidor de Media Browser?",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "Actualizar Ahora",
     "ValueItemCount": "{0} \u00edtem",
     "ValueItemCountPlural": "{0} \u00edtems",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "Canales de TV en Vivo",
     "OptionBlockChannelContent": "Contenido de Canales de Internet",
     "ButtonRevoke": "Revocar",
-    "MessageConfirmRevokeApiKey": "\u00bfEst\u00e1 seguro de querer revocar esta llave de API?",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "Revocar llave de API",
     "ValueContainer": "Contenedor: {0}",
     "ValueAudioCodec": "C\u00f3dec de Audio: {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "El complemento debe estar instalado desde la aplicaci\u00f3n en la que va a utilizarlo.",
     "ValuePriceUSD": "Precio: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Se encuentra registrado para esta caracter\u00edstica, y podr\u00e1 continuar us\u00e1ndola con una membres\u00eda de aficionado activa.",
-    "MessageChangeRecurringPlanConfirm": "Despu\u00e9s de completar esta transacci\u00f3n necesitar\u00e1 cancelar su donaci\u00f3n recurrente previa desde su cuenta de PayPal. Gracias por apoyar a Media Browser.",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "Su membres\u00eda de aficionado expir\u00f3 en {0}.",
-    "MessageYouHaveALifetimeMembership": "Usted cuenta con una membres\u00eda de aficionado vitalicia. Puede realizar donaciones adicionales individuales o recurrentes usando las opciones siguientes. Gracias por apoyar a Media Browser.",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Usted cuenta con membres\u00eda {0} activa. Puede mejorarla usando las opciones siguientes.",
     "ButtonDelete": "Eliminar",
-    "HeaderMediaBrowserAccountAdded": "Cuanta de Media Browser A\u00f1adida",
-    "MessageMediaBrowserAccountAdded": "La cuenta de Media Browser has sido a\u00f1adida a este usuario.",
-    "MessagePendingMediaBrowserAccountAdded": "La cuenta de Media Browser ha sifo a\u00f1adida a este usuario. Se enviar\u00e1 un correo electr\u00f3nico al due\u00f1o de dicha cuenta. La invitaci\u00f3n deber\u00e1 ser confirmada haciendo clic en la liga contenida en el correo.",
-    "HeaderMediaBrowserAccountRemoved": "Cuenta de Media Browser Removida",
-    "MessageMediaBrowserAccontRemoved": "La cuenta de Media Browser ha sido removida de este usuario.",
-    "TooltipLinkedToMediaBrowserConnect": "Ligado a Media Browser Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Sin clasificar",
     "ValueDiscNumber": "Disco {0}",
     "HeaderUnknownDate": "Fecha Desconocida",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Haga clic en editar para abrir el administrador de metadatos",
     "WebClientTourPlaylists": "Cree f\u00e1cilmente listas de reproducci\u00f3n y mezclas instant\u00e1neas, y reprod\u00fazcalas en cualquier dispositivo",
     "WebClientTourCollections": "Cree colecciones de pel\u00edculas para agruparlas en sets de pel\u00edculas",
-    "WebClientTourUserPreferences1": "Las preferencias de usuario le permiten personalizar la manera en que su biblioteca es presentada en todos sus apps de Media Browser",
-    "WebClientTourUserPreferences2": "Configure las preferencias de lenguaje de audio y subt\u00edtulos una sola vez, para todas las app de Media Browser",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Dise\u00f1e a su gusto la p\u00e1gina principal del cliente web",
     "WebClientTourUserPreferences4": "Configure im\u00e1genes de fondo, canciones de tema y reproductores externos",
     "WebClientTourMobile1": "El cliente web funciona de maravilla en tel\u00e9fonos inteligentes y tabletas...",
-    "WebClientTourMobile2": "y controla f\u00e1cilmente otros dispositivos y apps de Media Browser",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Sincronice sus medios personales a sus dispositivos para reproducirlos fuera de l\u00ednea.",
     "MessageEnjoyYourStay": "Disfrute su visita",
     "DashboardTourDashboard": "El panel de control del servidor le permite monitorear su servidor y sus usuarios. Siempre sabr\u00e1 quien est\u00e1 haciendo qu\u00e9 y donde se encuentran.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Instale complementos como canales de video de Internet, TV en vivo, buscadores de metadatos y m\u00e1s.",
     "DashboardTourNotifications": "Env\u00ede notificaciones automatizadas de eventos del servidor a sus dispositivos m\u00f3viles, correo electr\u00f3nico y m\u00e1s.",
     "DashboardTourScheduledTasks": "Administre f\u00e1cilmente operaciones de larga duraci\u00f3n con tareas programadas. Decida cuando se ejecutar\u00e1n y con que periodicidad.",
-    "DashboardTourMobile": "El Panel de Control de Media Browser funciona excelentemente en tel\u00e9fonos inteligentes y tabletas. Administre su servidor desde la palma de su mano en todo momento y lugar.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Sincronice sus medios personales a sus dispositivos para reproducirlos fuera de l\u00ednea.",
     "MessageRefreshQueued": "Actualizaci\u00f3n programada",
     "TabDevices": "Dispositivos",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "\u00bfEst\u00e1 seguro de querer eliminar este dispositivo? Volver\u00e1 a aparecer la siguiente vez que un usuario inicie sesi\u00f3n en \u00e9l.",
     "LabelEnableCameraUploadFor": "Habilitar subir desde la c\u00e1mara para:",
     "HeaderSelectUploadPath": "Seleccionar ruta de subida",
-    "LabelEnableCameraUploadForHelp": "Las subidas ocurrir\u00e1n autom\u00e1ticamente en segundo plano al iniciar sesi\u00f3n en Media Browser.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "El horario de fin debe ser mayor al de comienzo.",
     "ButtonLibraryAccess": "Acceso a biblioteca",
     "ButtonParentalControl": "Control parental",
     "HeaderInvitationSent": "Invitaci\u00f3n Enviada",
     "MessageInvitationSentToUser": "Se ha enviado un correo electr\u00f3nico a {0}, invit\u00e1ndolo a aceptar tu invitaci\u00f3n para compartir.",
-    "MessageInvitationSentToNewUser": "Se ha enviado un correo electr\u00f3nico a {0} invit\u00e1ndolo a registrarse con Media Browser.",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Falla de Conexi\u00f3n",
     "MessageUnableToConnectToServer": "No es posible conectarse al servidor seleccionado en este momento. Por favor aseg\u00farese de que se encuentra en ejecuci\u00f3n e int\u00e9ntelo nuevamente.",
     "ButtonSelectServer": "Seleccionar servidor",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "Se introdujo un pin expirado o invalido. Por favor intente de nuevo.",
     "MessagePasswordResetForUsers": "Las contrase\u00f1as han sido eliminadas de los siguientes usuarios:",
     "HeaderInviteGuest": "Agregar un Invitado",
-    "ButtonLinkMyMediaBrowserAccount": "Enlazar mi cuenta ahora",
-    "MessageConnectAccountRequiredToInviteGuest": "Para poder agregar invitados primero necesitas vincular tu cuenta de Media Browser a este servidor.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "SInc",
     "SyncMedia": "Sincronizar Medios",
     "HeaderCancelSyncJob": "Cancelar Sinc.",
