--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrator",
     "Password": "Passord",
     "DeleteImage": "Slett bilde",
-    "MessageThankYouForSupporting": "Takk for at du st\u00f8tter Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Vennligst st\u00f8tt Media Browser.",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "Er du sikker p\u00e5 at du vil slette bildet?",
     "FileReadCancelled": "Lesing av filen kansellert.",
     "FileNotFound": "Fil ikke funnet",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Takk. Din supportern\u00f8kkel har blitt fjernet.",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remove User",
     "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "Dette kj\u00f8res vanligvis automatisk som en planlagt oppgave. Den kan ogs\u00e5 kj\u00f8res manuelt herfra. For \u00e5 konfigurere planlagte oppgaver, se:",
     "HeaderSupporterBenefit": "St\u00f8ttemedlemskap gir ytterligere fordeler som for eksempel tilgang til synkronisering, premium plugins, internett-kanaler og mer. {0}L\u00e6r mer{1}.",
     "LabelSyncNoTargetsHelp": "Det ser ikke ut til at du har noen applikasjoner som st\u00f8tter synkronisering.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Velkommen til Media Browser Dashbord",
-    "HeaderWelcomeToMediaBrowserWebClient": "Velkommen til Media Browser Webklient",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Bli med p\u00e5 omvisning",
     "HeaderWelcomeBack": "Velkommen tilbake!",
     "TitleSync": "Synk",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Vennligst velg minst ett element.",
     "MessagePleaseSelectTwoItems": "Vennligst velg minst to elementer.",
     "MessageTheFollowingItemsWillBeGrouped": "F\u00f8lgende titler vil bli gruppert til ett element:",
-    "MessageConfirmItemGrouping": "Media Browser klienter vil automatisk velge den mest optimale versjonen for avspilling basert p\u00e5 enhet og nettverks ytelse. Er du sikker p\u00e5 at du vil fortsette?",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "Fortsette",
     "HeaderMyViews": "Mitt Syn",
     "HeaderLibraryFolders": "Media Mapper",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Resultat: {0}",
     "HeaderRestart": "Omstart",
     "HeaderShutdown": "Sl\u00e5 Av",
-    "MessageConfirmRestart": "Er du sikker p\u00e5 at du vil gi Media Browser Server en omstart?",
-    "MessageConfirmShutdown": "Er du sikker p\u00e5 du vil sl\u00e5 av Media Browser Server?",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "Oppdater N\u00e5",
     "ValueItemCount": "{0} element",
     "ValueItemCountPlural": "{0} elementer",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "Live TV Kanaler",
     "OptionBlockChannelContent": "Innhold fra Internettkanal",
     "ButtonRevoke": "Tilbakekall",
-    "MessageConfirmRevokeApiKey": "Er du sikker p\u00e5 at du vil tilbakekalle denne API-n\u00f8kkelen? Applikasjonens forbindelse til Media Browser vil bli avsluttet umiddelbart.",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "Tilbakekall API-n\u00f8kkel",
     "ValueContainer": "Kontainer: {0}",
     "ValueAudioCodec": "Lyd Kodek: {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "Dette programtillegget m\u00e5 installeres direkte i appen du har tenkt \u00e5 bruke den i.",
     "ValuePriceUSD": "Pris: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Du er registrert for denne funksjonen, og vil kunne fortsette \u00e5 bruke den med et aktiv supporter medlemskap.",
-    "MessageChangeRecurringPlanConfirm": "Etter \u00e5 ha fullf\u00f8rt denne transaksjonen vil du m\u00e5 avbestille din tidligere gjentakende donasjon fra din PayPal-konto. Takk for at du st\u00f8tter Media Browser.",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "Ditt supporter medlemskap utl\u00f8p den {0}.",
-    "MessageYouHaveALifetimeMembership": "Du har et livstids supporter medlemskap. Du kan gi ytterligere donasjoner p\u00e5 en engangs eller periodisk basis ved hjelp av alternativene nedenfor. Takk for at du st\u00f8tter Media Browser.",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Du har et aktivt {0} medlemskap. Du kan oppgradere din plan ved hjelp av alternativene nedenfor.",
     "ButtonDelete": "Slett",
-    "HeaderMediaBrowserAccountAdded": "Media Browser kontoen er lagt til",
-    "MessageMediaBrowserAccountAdded": "Media Browser kontoen er lagt til denne brukeren.",
-    "MessagePendingMediaBrowserAccountAdded": "Media Browser kontoen er lagt til denne brukeren. En e-post vil bli sendt til eieren av kontoen. Invitasjonen m\u00e5 bekreftes ved \u00e5 klikke p\u00e5 en lenke i e-posten.",
-    "HeaderMediaBrowserAccountRemoved": "Media Browser konto fjernet",
-    "MessageMediaBrowserAccontRemoved": "Media Browser kontoen er fjernet fra denne brukeren.",
-    "TooltipLinkedToMediaBrowserConnect": "Knyttet til Media Browser Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Uvurdert",
     "ValueDiscNumber": "Disk {0}",
     "HeaderUnknownDate": "Ukjent dato",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Klikk rediger for \u00e5 \u00e5pne metadata behandleren",
     "WebClientTourPlaylists": "Du kan enkelt lage spillelister og direktemikser, og spille dem p\u00e5 hvilken som helst enhet",
     "WebClientTourCollections": "Lag dine egne samlebokser",
-    "WebClientTourUserPreferences1": "Brukerpreferanser lar deg tilpasse m\u00e5ten biblioteket er presentert i alle Media Browser apper",
-    "WebClientTourUserPreferences2": "Konfigurer spr\u00e5kpreferanse for lyd og undertekst en gang, for hver media nettleser app",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Utform startsiden slik du \u00f8nsker den.",
     "WebClientTourUserPreferences4": "Konfigurer bakgrunner, temasanger og eksterne avspillere",
     "WebClientTourMobile1": "Webklienten fungerer bra p\u00e5 smarttelefoner og nettbrett ...",
-    "WebClientTourMobile2": "og enkelt styrer andre enheter og mediabrowser apps",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Synkronis\u00e9r dine personlige mediefiler til dine enheter for offline bruk.",
     "MessageEnjoyYourStay": "Nyt oppholdet",
     "DashboardTourDashboard": "Server dashboard lar deg overv\u00e5ke serveren og brukerene. Du kan til enhver tid se hvem som gj\u00f8r hva, og hvor de er.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Installer programtillegg som internett video kanaler, direkte tv, metadata eskanners, og mere til.",
     "DashboardTourNotifications": "Send meldinger automatisk for server handlinger til dine mobile enheter, epost, etc.",
     "DashboardTourScheduledTasks": "Administrer enkelt operasjoner som kan ta lang tid med oppgaveplanlegging. Bestem n\u00e5r de kj\u00f8rer og hvor ofte.",
-    "DashboardTourMobile": "Media Browser dashboard fungerer fint p\u00e5 en smart telefon og nettbrett. Administrer din server fra din h\u00e5ndflate n\u00e5r som helst, hvor som helst.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Synkroniser personlige mediafiler til din enhet for \u00e5 se p\u00e5 offline.",
     "MessageRefreshQueued": "Oppfrisk k\u00f8en",
     "TabDevices": "Enheter",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "Er du sikker p\u00e5 at du vil slette denne enheten? Den vil gjenoppst\u00e5 neste gang en bruker logger inn med den.",
     "LabelEnableCameraUploadFor": "Aktiver kameraopplasting for:",
     "HeaderSelectUploadPath": "Velg Opplastings sti",
-    "LabelEnableCameraUploadForHelp": "Opplasting vil foreg\u00e5 automatisk i bakgrunnen n\u00e5r man er logget inn i Media Browser.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "Sluttid m\u00e5 v\u00e6re senere enn starttid.",
     "ButtonLibraryAccess": "Bibliotektilgang",
     "ButtonParentalControl": "Foreldrekontroll",
     "HeaderInvitationSent": "Invitasjon Sendt",
     "MessageInvitationSentToUser": "En epost har blitt sent til {0} med oppfordring til \u00e5 godta invitasjonen din.",
-    "MessageInvitationSentToNewUser": "En epost har blitt sendt til {0} med en invitasjon til \u00e5 registrere seg med Media Browser.",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Tilkobling feilet",
     "MessageUnableToConnectToServer": "Vi kan ikke kontakte angitt server akkurat n\u00e5. Sjekk at den er startet og pr\u00f8v igjen.",
     "ButtonSelectServer": "Velg server",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "Ugyldig eller utg\u00e5tt PIN kode angitt. Vennligst pr\u00f8v igjen.",
     "MessagePasswordResetForUsers": "Passordet er fjernet for f\u00f8lgende brukere:",
     "HeaderInviteGuest": "Inviter gjest",
-    "ButtonLinkMyMediaBrowserAccount": "Link kontoen min n\u00e5",
-    "MessageConnectAccountRequiredToInviteGuest": "For \u00e5 kunne invitere gjester m\u00e5 du f\u00f8rst linke kontoen din p\u00e5 Media Browser til denne serveren.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Synk",
     "SyncMedia": "Synkroniser media",
     "HeaderCancelSyncJob": "Avbryt synkronisering",
