--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -6,8 +6,8 @@
     "Administrator": "Beheerder",
     "Password": "Wachtwoord",
     "DeleteImage": "Verwijder afbeelding",
-    "MessageThankYouForSupporting": "Dank u voor de ondersteuning van Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Geef a.u.b. uw steun aan Media Browser.",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "Weet u zeker dat u deze afbeelding wilt verwijderen?",
     "FileReadCancelled": "Bestand lezen is geannuleerd.",
     "FileNotFound": "Bestand niet gevonden.",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Dank u. Uw supporter sleutel is verwijderd.",
     "ErrorLaunchingChromecast": "Er is een fout opgetreden bij het starten van chromecast. Zorg ervoor dat uw apparaat is aangesloten op uw draadloze netwerk.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remove User",
     "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "Deze operatie loopt normaal gesproken automatisch als een geplande taak. Het kan hier ook handmatig worden uitgevoerd. Om de geplande taak te configureren, zie:",
     "HeaderSupporterBenefit": "Een supporter lidmaatschap biedt voordelen zoals toegang tot synchronisatie, premium plug-ins, internet kanalen en meer. {0}Meer weten{1}.",
     "LabelSyncNoTargetsHelp": "Het lijkt erop dat je momenteel geen apps hebt die synchroniseren ondersteunen.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Welkom bij het Media Browser Dashboard",
-    "HeaderWelcomeToMediaBrowserWebClient": "Welkom op de Media Browser Web Client",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Volg de tour",
     "HeaderWelcomeBack": "Welkom terug!",
     "TitleSync": "Synchroniseer",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Selecteer ten minste een item.",
     "MessagePleaseSelectTwoItems": "Selecteer ten minste twee items.",
     "MessageTheFollowingItemsWillBeGrouped": "De volgende titels worden gegroepeerd in \u00e9\u00e9n item:",
-    "MessageConfirmItemGrouping": "Media Browser clients zullen automatisch de optimale versie afspelen op basis van het apparaat en de prestaties van het netwerk. Weet u zeker dat u wilt doorgaan?",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "Hervatten",
     "HeaderMyViews": "Mijn Overzichten",
     "HeaderLibraryFolders": "Media Mappen",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Resultaat: {0}",
     "HeaderRestart": "Herstart",
     "HeaderShutdown": "Afsluiten",
-    "MessageConfirmRestart": "Weet u zeker dat u Media Browser Server wilt herstarten?",
-    "MessageConfirmShutdown": "Weet u zeker dat u Media Browser Server wilt afsluiten?",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "Nu bijwerken",
     "ValueItemCount": "{0} item",
     "ValueItemCountPlural": "{0} items",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "Live TV Kanalen",
     "OptionBlockChannelContent": "Internet kanaal Inhoud",
     "ButtonRevoke": "Herroepen",
-    "MessageConfirmRevokeApiKey": "Weet u zeker dat u deze Api sleutel intrekt? Verbinding van de toepassing met Media Browser zal abrupt worden verbroken.",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "Intrekken Api Sleutel",
     "ValueContainer": "Container: {0}",
     "ValueAudioCodec": "Audio Codec: {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "Deze plugin moet ge\u00efnstalleerd worden vanuit de app waarin u het wilt gebruiken.",
     "ValuePriceUSD": "Prijs {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "U bent geregistreerd voor deze functie, en zal deze kunnen blijven gebruiken met uw actieve supporter lidmaatschap.",
-    "MessageChangeRecurringPlanConfirm": "Na het afronden van deze transactie moet u de vorige terugkerende donatie in uw PayPal account stopzetten. Bedankt voor uw support aan Media Browser.",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "Uw supporter lidmaatschap is verlopen op {0}",
-    "MessageYouHaveALifetimeMembership": "U hebt een levenslang supporter lidmaatschap. U kunt aanvullende eenmalige of terugkerende donaties doen met de opties hieronder. Bedankt voor uw support aan Media Browser.",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "U hebt een actief {0} lidmaatschap. U kunt met de opties hieronder uw lidmaatschap upgraden.",
     "ButtonDelete": "Verwijderen",
-    "HeaderMediaBrowserAccountAdded": "Media Browser account toegevoegd",
-    "MessageMediaBrowserAccountAdded": "Het Media Browser account is aan deze gebruiker toegevoegd.",
-    "MessagePendingMediaBrowserAccountAdded": "Het Media Browser account is aan deze gebruiker toegevoegd.Er wordt een emailbericht naar de eigenaar van het account gestuurd. De uitnodigind moet bevestigd worden door op de link in het emailbericht te klikken.",
-    "HeaderMediaBrowserAccountRemoved": "Media Browser account verwijderd",
-    "MessageMediaBrowserAccontRemoved": "Het Media Browser account is verwijderd van deze gebruiker.",
-    "TooltipLinkedToMediaBrowserConnect": "Gekoppeld met Media Browser Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Geen rating",
     "ValueDiscNumber": "Disc {0}",
     "HeaderUnknownDate": "Onbekende datum",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Klik wijzigen om de metadata manager te openen",
     "WebClientTourPlaylists": "Maak eenvoudig een afspeellijst en mixlijst, en speel deze op elk apparaat",
     "WebClientTourCollections": "Maak film Collecties door boxsets samen te voegen",
-    "WebClientTourUserPreferences1": "Gebruikersvoorkeuren stellen u in staat de manier waarop de bibliotheek aan gebruikers getoond wordt aan te passen",
-    "WebClientTourUserPreferences2": "Configureer uw geluids- en ondertitelingsinstellingen eenmalig voor elke Media Browser app",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Ontwerp de startpagina van de web client volgens uw wensen",
     "WebClientTourUserPreferences4": "Configureer achtergronden, theme songs en externe spelers",
     "WebClientTourMobile1": "De web client werk perfect op smartphones en tablets...",
-    "WebClientTourMobile2": "en kan elke andere Media Browser app bedienen",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Synchroniseer je persoonlijke media naar je apparaten om het offline te bekijken.",
     "MessageEnjoyYourStay": "Geniet van uw verblijf",
     "DashboardTourDashboard": "Het server-dashboard steld u in staat uw server en uw gebruikers te monitoren . U zult altijd weten wie wat doet en waar ze zijn.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Installeer plugins zoals Internet videokanalen, live tv, metadata, scanners en meer.",
     "DashboardTourNotifications": "Meldingen van de server gebeurtenissen automatisch verzenden naar uw mobiele apparaat, e-mail en meer.",
     "DashboardTourScheduledTasks": "Beheer eenvoudig langlopende transacties met geplande taken. Beslis zelf wanneer ze worden uitgevoerd en hoe vaak.",
-    "DashboardTourMobile": "Het dashboard van Media Browser werkt geweldig op smartphones en tablets. Beheer je server vanuit de palm van je hand, overal en altijd.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Synchroniseer je persoonlijke media naar je apparaten om het offline te bekijken.",
     "MessageRefreshQueued": "Vernieuwen wachtrij",
     "TabDevices": "Apparaten",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "Weet u zeker dat u dit apparaat wilt verwijderen? Het zal opnieuw verschijnen als een gebruiker zich hiermee aanmeldt.",
     "LabelEnableCameraUploadFor": "Schakel camera upload in voor:",
     "HeaderSelectUploadPath": "Kies upload pad",
-    "LabelEnableCameraUploadForHelp": "Uploads zullen automatisch in de achtergrond uitgevoerd worden als er aangemeld is bij Media Browser.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "Eind tijd moet na de start tijd liggen.",
     "ButtonLibraryAccess": "Bibliotheek toegang",
     "ButtonParentalControl": "Ouderlijk toezicht",
     "HeaderInvitationSent": "Uitnodiging verzonden",
     "MessageInvitationSentToUser": "Een email is verzonden naar {0} om uw uitnodiging om media te delen te accepteren.",
-    "MessageInvitationSentToNewUser": "Een email is verzonden naar {0} om je uitnodiging aan te melden bij Media Browser",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Verbindingsfout",
     "MessageUnableToConnectToServer": "Het is momenteel niet mogelijk met de geselecteerde server te verbinden. Controleer dat deze draait en probeer het opnieuw.",
     "ButtonSelectServer": "Selecteer server",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "Er is een ongeldige of verlopen pincode ingegeven. Probeer opnieuw.",
     "MessagePasswordResetForUsers": "Wachtwoorden zijn verwijderd van de volgende gebruikers:",
     "HeaderInviteGuest": "Nodig gast uit",
-    "ButtonLinkMyMediaBrowserAccount": "Koppel mijn account nu",
-    "MessageConnectAccountRequiredToInviteGuest": "Om gasten uit te kunnen nodigen moet uw Media Browser account aan deze server gekoppeld worden.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Synchronisatie",
     "SyncMedia": "Synchroniseer media",
     "HeaderCancelSyncJob": "Annuleer synchronisatie",
