--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrat\u00f6r",
     "Password": "L\u00f6senord",
     "DeleteImage": "Ta bort bild",
-    "MessageThankYouForSupporting": "Thank you for supporting Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Please support Media Browser.",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "\u00c4r du s\u00e4ker p\u00e5 att du vill ta bort den h\u00e4r bilden?",
     "FileReadCancelled": "Inl\u00e4sningen av filen har avbrutits.",
     "FileNotFound": "Kan inte hitta filen.",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Tack. Din donationskod har raderats.",
     "ErrorLaunchingChromecast": "Det gick inte att starta Chromecast. Kontrollera att enheten \u00e4r ansluten till det tr\u00e5dl\u00f6sa n\u00e4tverket.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remove User",
     "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
     "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "V\u00e4lkommen till Media Browsers kontrollpanel",
-    "HeaderWelcomeToMediaBrowserWebClient": "V\u00e4lkommen till Media Browsers webbklient",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Ta en rundtur",
     "HeaderWelcomeBack": "Welcome back!",
     "TitleSync": "Sync",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Var god v\u00e4lj minst ett objekt.",
     "MessagePleaseSelectTwoItems": "Var god v\u00e4lj minst tv\u00e5 objekt.",
     "MessageTheFollowingItemsWillBeGrouped": "F\u00f6ljande titlar kommer att grupperas till ett enda objekt:",
-    "MessageConfirmItemGrouping": "Media Browser-klienter kommer automatiskt att v\u00e4lja den b\u00e4sta versionen f\u00f6r uppspelning baserat p\u00e5 enhets- och n\u00e4tverksprestanda.Vill du forts\u00e4tta?",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "\u00c5teruppta",
     "HeaderMyViews": "Mina vyer",
     "HeaderLibraryFolders": "Mediamappar",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Resultat: {0}",
     "HeaderRestart": "Starta om",
     "HeaderShutdown": "St\u00e4ng av",
-    "MessageConfirmRestart": "\u00c4r du s\u00e4ker p\u00e5 att du vill starta om Media Browser Server?",
-    "MessageConfirmShutdown": "\u00c4r du s\u00e4ker p\u00e5 att du vill st\u00e4nga av Media Browser Server?",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "Uppdatera nu",
     "ValueItemCount": "{0} objekt",
     "ValueItemCountPlural": "{0} objekt",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "TV-kanaler",
     "OptionBlockChannelContent": "Kanalinneh\u00e5ll fr\u00e5n Internet",
     "ButtonRevoke": "\u00c5terkalla",
-    "MessageConfirmRevokeApiKey": "\u00c4r du s\u00e4ker p\u00e5 att du vill \u00e5terkalla den h\u00e4r API-nyckeln? Programmets anslutning till Media Browser kommer att avbrytas omg\u00e5ende.",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "\u00c5terkalla API-nyckel",
     "ValueContainer": "Container: {0}",
     "ValueAudioCodec": "Audiocodec: {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "Detta till\u00e4gg m\u00e5ste installeras inifr\u00e5n den app det skall anv\u00e4ndas i.",
     "ValuePriceUSD": "Pris: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Du har registrerat den h\u00e4r funktionen och kan forts\u00e4tta att anv\u00e4nda den om du \u00e4r aktiv supportermedlem.",
-    "MessageChangeRecurringPlanConfirm": "N\u00e4r du avslutat den h\u00e4r transaktionen beh\u00f6ver du avbryta din tidigare st\u00e5ende donation via ditt PayPal-konto.",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "Ditt supportermedlemskap upph\u00f6rde att g\u00e4lla  {0}.",
-    "MessageYouHaveALifetimeMembership": "Du har ett livstids supportermedlemskap. Du kan l\u00e4mna extra bidrag, antingen i eng\u00e5ngsform eller \u00e5terkommande med hj\u00e4lp av valm\u00f6jligheterna nedan. Tack f\u00f6r att Du st\u00f6djer Media Browser.",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Du har ett aktivt  {0} medlemskap. Du kan uppgradera med hj\u00e4lp av valm\u00f6jligheterna nedan.",
     "ButtonDelete": "Ta bort",
-    "HeaderMediaBrowserAccountAdded": "Ett Media Browser-konto har skapats",
-    "MessageMediaBrowserAccountAdded": "Media Browser-kontot har lagts till den h\u00e4r anv\u00e4ndaren.",
-    "MessagePendingMediaBrowserAccountAdded": "Media Browser-kontot har lagts till den h\u00e4r anv\u00e4ndaren. Ett e-postmeddelande skickas till kontots \u00e4gare. Inbjudan m\u00e5ste bekr\u00e4ftas genom att klicka p\u00e5 en l\u00e4nk angiven i meddelandet.",
-    "HeaderMediaBrowserAccountRemoved": "Media Browser-kontot har tagits bort.",
-    "MessageMediaBrowserAccontRemoved": "Media Browser-kontot har tagits bort fr\u00e5n den h\u00e4r anv\u00e4ndaren.",
-    "TooltipLinkedToMediaBrowserConnect": "L\u00e4nkad till Media Browser Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Ej klassad",
     "ValueDiscNumber": "Skiva {0}",
     "HeaderUnknownDate": "Ok\u00e4nt datum",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Klicka p\u00e5 \"\u00e4ndra\" f\u00f6r att \u00f6ppna metadatahanteraren",
     "WebClientTourPlaylists": "Skapa enkelt spellistor och snabbmixar och spela upp dem p\u00e5 valfri enhet",
     "WebClientTourCollections": "Skapa dina egna samlingsboxar",
-    "WebClientTourUserPreferences1": "Personliga inst\u00e4llningar l\u00e5ter dig anpassa hur ditt bibliotek visas i alla dina Media Browser-appar",
-    "WebClientTourUserPreferences2": "V\u00e4lj ljudspr\u00e5k uch undertexter en g\u00e5ng f\u00f6r alla f\u00f6r alla Media Browser-appar",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Utforma webbklientens utseende enligt egna \u00f6nskem\u00e5l",
     "WebClientTourUserPreferences4": "Anpassa fondbilder, ledmotiv och externa uppspelare",
     "WebClientTourMobile1": "Webbklienten fungerar perfekt p\u00e5 smarta telefoner och surfplattor...",
-    "WebClientTourMobile2": "och kan enkelt fj\u00e4rrstyra andra enheter och Media Browser-appar",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Ha ett trevligt bes\u00f6k",
     "DashboardTourDashboard": "Via serverns kontrollpanel kan du \u00f6vervaka din server och alla anv\u00e4ndare. Du kommer alltid att kunna veta vem som g\u00f6r vad och var de \u00e4r.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Installera till\u00e4gg s\u00e5som Internetvideokanaler, live-TV, metadatah\u00e4mtare och mycket mer.",
     "DashboardTourNotifications": "Skicka automatiskt meddelanden om serverh\u00e4ndelser till din mobiltelefon, e-post och mycket mer.",
     "DashboardTourScheduledTasks": "Hantera enkelt tidskr\u00e4vande uppgifter med hj\u00e4lp av schemalagda aktiviteter. Best\u00e4m n\u00e4r de skall k\u00f6ras, och hur ofta.",
-    "DashboardTourMobile": "Media Browsers kontrollpanel fungerar utm\u00e4rkt p\u00e5 smarta telefoner och surfplattor. Administrera din server n\u00e4r som helst, varifr\u00e5n som helst.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Uppdatering k\u00f6ad",
     "TabDevices": "Enheter",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "\u00c4r du s\u00e4ker p\u00e5 att du vill ta bort den h\u00e4r enheten? Den kommer att dyka upp igen n\u00e4sta g\u00e5ng en anv\u00e4ndare kopplar upp sig med den.",
     "LabelEnableCameraUploadFor": "Aktivera kamerauppladdning f\u00f6r:",
     "HeaderSelectUploadPath": "V\u00e4lj s\u00f6kv\u00e4g f\u00f6r uppladdning",
-    "LabelEnableCameraUploadForHelp": "Uppladdning sker automatiskt i bakgrunden n\u00e4r man \u00e4r inloggad i Media Browser.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "Sluttiden m\u00e5ste vara senare \u00e4n starttiden.",
     "ButtonLibraryAccess": "Library access",
     "ButtonParentalControl": "Parental control",
     "HeaderInvitationSent": "Invitation Sent",
     "MessageInvitationSentToUser": "An email has been sent to {0}, inviting them to accept your sharing invitation.",
-    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Media Browser.",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Connection Failure",
     "MessageUnableToConnectToServer": "We're unable to connect to the selected server right now. Please ensure it is running and try again.",
     "ButtonSelectServer": "Select server",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "An invalid or expired pin was entered. Please try again.",
     "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
     "HeaderInviteGuest": "Invite Guest",
-    "ButtonLinkMyMediaBrowserAccount": "Link my account now",
-    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Media Browser account to this server.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Synk",
     "SyncMedia": "Synkronisera Media",
     "HeaderCancelSyncJob": "Cancel Sync",
