--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrator",
     "Password": "Passwort",
     "DeleteImage": "Bild l\u00f6schen",
-    "MessageThankYouForSupporting": "Danke, f\u00fcr die Unterst\u00fctzung von Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Bitte unterst\u00fctze Media Browser.",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "M\u00f6chtest du dieses Bild wirklich l\u00f6schen?",
     "FileReadCancelled": "Dateiimport wurde abgebrochen.",
     "FileNotFound": "Datei nicht gefunden",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Danke. Ihr Unterst\u00fctzerschl\u00fcssel wurde entfernt.",
     "ErrorLaunchingChromecast": "W\u00e4hrend des startens von Chromecast ist ein Fehler aufgetreten. Bitte stelle sicher, dass dein Ger\u00e4te mit dem WLAN verbunden ist.",
     "MessageErrorLoadingSupporterInfo": "Es trat ein Fehler beim laden der Unterst\u00fctzer-Informationen auf. Bitte versuchen Sie es sp\u00e4ter erneut.",
-    "MessageLinkYourSupporterKey": "Verkn\u00fcpfen Sie Ihren Unterst\u00fctzer-Schl\u00fcssel mit bis zu {0} Media Browser Connect Anwendern um Zugriff auf folgende Apps zu erhalten:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Entferne Benutzer",
     "MessageSwipeDownOnRemoteControl": "Willkommen zur Fernsteuerung. Streichen Sie irgendwo auf dem Bildschirm nach unten um dorthin zur\u00fcck zu gehen, von wo aus Sie kamen.",
     "MessageConfirmRemoveConnectSupporter": "M\u00f6chten Sie wirklich zus\u00e4tzliche Unterst\u00fctzer-Features von diesem Anwender entfernen?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "Diese Aufgabe l\u00e4uft normalerweise automatisch als geplante Aufgabe. Sie kann jedoch auch manuell von hier gestartet werden. F\u00fcr Einstellungen der geplanten Aufgaben schauen Sie hier:",
     "HeaderSupporterBenefit": "Eine Unterst\u00fctzer-Mitgliedschaft bietet weitere Funktionen wie z.B. Zugriff auf die Synchronisation, Premium-Plugins, Internet Kan\u00e4le und mehr. {0}Erfahren Sie mehr{1}.",
     "LabelSyncNoTargetsHelp": "Es sieht so aus als w\u00fcrden Sie aktuell keine Apps verwenden, die Synchronisation unterst\u00fctzen.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Willkommen zur Media Browser \u00dcbersicht",
-    "HeaderWelcomeToMediaBrowserWebClient": "Willkommen zum Media Browser Web Client",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Mache die Tour",
     "HeaderWelcomeBack": "Willkommen zur\u00fcck!",
     "TitleSync": "Synchronisation",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Bitte w\u00e4hle mindestens eine Option aus.",
     "MessagePleaseSelectTwoItems": "Bitte w\u00e4hle mindestens zwei Optionen aus.",
     "MessageTheFollowingItemsWillBeGrouped": "Die folgenden Titel werden zu einem Element gruppiert:",
-    "MessageConfirmItemGrouping": "Media Browser Abspielger\u00e4te werden automatisch die optimale Version, basierend auf dem Endger\u00e4t und der Netzwerkperformance, f\u00fcr die Wiedergabe ausw\u00e4hlen. M\u00f6chtest du fortfahren?",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "Fortsetzen",
     "HeaderMyViews": "Meine Ansichten",
     "HeaderLibraryFolders": "Medienverzeichnisse",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Ergebnis: {0}",
     "HeaderRestart": "Neustart",
     "HeaderShutdown": "Herunterfahren",
-    "MessageConfirmRestart": "Bist du dir sicher Media Browser Server neustarten zu wollen?",
-    "MessageConfirmShutdown": "Bist du dir sicher Media Browser Server herunterfahren zu wollen?",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "Jetzt aktualisieren",
     "ValueItemCount": "{0} Eintrag",
     "ValueItemCountPlural": "{0} Eintr\u00e4ge",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "Live-TV Kan\u00e4le",
     "OptionBlockChannelContent": "Internet Channelinhalte",
     "ButtonRevoke": "Zur\u00fccknehmen",
-    "MessageConfirmRevokeApiKey": "Bist du dir sicher den API Schl\u00fcssel zur\u00fccknehmen zu wollen? Anwendungen die mit Media Browser verbunden sind werden umgehend gestoppt.",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "Nehme API Schl\u00fcssel zur\u00fcck",
     "ValueContainer": "Container: {0}",
     "ValueAudioCodec": "Audio Codec: {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "Dieses Plugin muss von der App aus installiert werden, mit der du es benutzen willst.",
     "ValuePriceUSD": "Preis: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Du bist f\u00fcr diese Funktion registriert und kannst diese durch eine aktive Unterst\u00fctzer Mitgliedschaft weiterhin nutzen.",
-    "MessageChangeRecurringPlanConfirm": "Nach der Vervollst\u00e4ndigung diese \u00dcberweisung musst du deine fortlaufenden \u00dcberweisungen \u00fcber deinen PayPal Account deaktivieren. Danke f\u00fcr deine Unterst\u00fctzung von Media Browser.",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "Deine Unterst\u00fctzer Mitgliedschaft endet am {0}.",
-    "MessageYouHaveALifetimeMembership": "Du hast eine lebensl\u00e4ngliche Unterst\u00fctzer Mitgliedschaft. Du kannst zus\u00e4tzliche Spenden durch eine Einmalzahlung oder fortlaufende Zahlungen mit Hilfe der folgenden Optionen durchf\u00fchren. Danke f\u00fcr deine Unterst\u00fctzung von Media Browser",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Du hast eine aktive {0} Mitgliedschaft. Du kannst deine Mitgliedschaft durch folgende Optionen aufwerten.",
     "ButtonDelete": "L\u00f6schen",
-    "HeaderMediaBrowserAccountAdded": "Media Browser Account hinzugef\u00fcgt",
-    "MessageMediaBrowserAccountAdded": "Der Media Browser Account f\u00fcr diesen Benutzer wurde hinzugef\u00fcgt",
-    "MessagePendingMediaBrowserAccountAdded": "Der Media Browser Account f\u00fcr diesen Benutzer wurde hinzugef\u00fcgt. Eine E-Mail wird an den Eigent\u00fcmer des Accounts gesendet werden. Die Einladung muss durch aufrufen des Links in der E-Mail best\u00e4tigt werden.",
-    "HeaderMediaBrowserAccountRemoved": "Media Browser Account gel\u00f6scht",
-    "MessageMediaBrowserAccontRemoved": "Der Media Browser Account wurde von diesem Computer entfernt",
-    "TooltipLinkedToMediaBrowserConnect": "Verkn\u00fcpft mit Media Browser Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Nicht bewertet",
     "ValueDiscNumber": "Disc {0}",
     "HeaderUnknownDate": "Unbekanntes Datum",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Klicke auf \"Bearbeiten\" um den Metadaten-Manager zu \u00f6ffnen",
     "WebClientTourPlaylists": "Erstelle einfach Wiedergabelisten und Schnellmixe und spiele diese auf jedem Ger\u00e4t",
     "WebClientTourCollections": "Erstelle Film Sammlungen um Box-Sets zusammenzuf\u00fchren",
-    "WebClientTourUserPreferences1": "\u00dcber die Benutzereinstellungen kannst du die Art und Weise der Bibliotheksdarstellung auf all deinen Meda Browser App anpassen.",
-    "WebClientTourUserPreferences2": "Konfiguriere deine Audio- und Untertitelspracheinstellungen einmal f\u00fcr jede Media Browser App",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Designe die Web-Client-Homepage nach deinen W\u00fcnschen",
     "WebClientTourUserPreferences4": "Konfiguriere Hintergr\u00fcnde, Titelsongs und externe Abspieler",
     "WebClientTourMobile1": "Der Web-Client funktioniert hervorragend auf Smartphones und Tablets ...",
-    "WebClientTourMobile2": "und steuert einfach andere Ger\u00e4te und Media Browser Anwendungen",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Synchronisieren Sie pers\u00f6nliche Medien mit Ihren Ger\u00e4ten um diese offline anzuschauen.",
     "MessageEnjoyYourStay": "Genie\u00dfe deinen Aufenthalt",
     "DashboardTourDashboard": "Die Server\u00fcbersicht erlaubt es dir deinen Server und dessen Benutzer im Blick zu behalten. Somit wei\u00dft du immer wer gerade was macht und wo er sich befindet.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Installiere Plugins wie Internet Videoportale, Live-TV, Metadatenscanner und mehr.",
     "DashboardTourNotifications": "Sende automatisch Benachrichtigungen von Serverereignissen auf dein mobiles Endger\u00e4t, per E-Mail und mehr.",
     "DashboardTourScheduledTasks": "Verwalte einfach lang dauernde Aufgaben mit Hilfe von geplanten Aufgaben. Entscheide wann diese ausgef\u00fchrt werden und wie oft.",
-    "DashboardTourMobile": "Die Media Browser \u00dcbersicht funktioniert auch hervorragend auf Smartphones und Tablets. Verwalte deinen Server jederzeit und \u00fcberall  direkt von deiner Handfl\u00e4che aus.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Synchronisieren Sie pers\u00f6nliche Medien mit Ihren Ger\u00e4ten um diese offline anzuschauen.",
     "MessageRefreshQueued": "Warteschlange aktualisieren",
     "TabDevices": "Ger\u00e4te",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "Bist du dir sicher dieses Ger\u00e4t l\u00f6schen zu wollen? Es wird wieder angezeigt werden, sobald sich ein Uder dar\u00fcber einloggt.",
     "LabelEnableCameraUploadFor": "Aktiviere den Kamera-Upload f\u00fcr:",
     "HeaderSelectUploadPath": "W\u00e4hle Upload Pfad",
-    "LabelEnableCameraUploadForHelp": "Uploads werden automatisch im Hintergrund durchgef\u00fchrt wenn du in Media Browser eingeloggt bist.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "Die Endzeit muss gr\u00f6\u00dfer als die Startzeit sein.",
     "ButtonLibraryAccess": "Bibliothekszugang",
     "ButtonParentalControl": "Kindersicherung",
     "HeaderInvitationSent": "Einladung verschickt",
     "MessageInvitationSentToUser": "Eine E-Mail mit der Einladung zum Sharing ist an {0} geschickt worden.",
-    "MessageInvitationSentToNewUser": "Eine E-Mail mit der Einladung zur Anmeldung am Media Browser ist an {0} geschickt worden.",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Verbindungsfehler",
     "MessageUnableToConnectToServer": "Wir k\u00f6nnen gerade keine Verbindung zum gew\u00e4hlten Server herstellen. Bitte stellen Sie sicher das dieser l\u00e4uft und versuchen Sie es erneut.",
     "ButtonSelectServer": "W\u00e4hle Server",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "Ein ung\u00fcltiger oder abgelaufener PIN wurde eingegeben. Bitte versuche es noch einmal.",
     "MessagePasswordResetForUsers": "Passw\u00f6rter der folgenden Benutzer wurden entfernt:",
     "HeaderInviteGuest": "Lade G\u00e4ste ein",
-    "ButtonLinkMyMediaBrowserAccount": "Verkn\u00fcpfe jetzt meinen Account",
-    "MessageConnectAccountRequiredToInviteGuest": "Um G\u00e4ste einladen zu k\u00f6nnen, musst du zuerst deinen Media Browser Account auf diesem Server verkn\u00fcpfen.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Synchronisieren",
     "SyncMedia": "Synchronisiere Medien",
     "HeaderCancelSyncJob": "Synchronisierung abbrechen",
