--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -6,8 +6,8 @@
     "Administrator": "Amministratore",
     "Password": "Password",
     "DeleteImage": "Elimina immagine",
-    "MessageThankYouForSupporting": "Grazie per supportare Media Browser",
-    "MessagePleaseSupportMediaBrowser": "Per favore supporta Media Browser",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "Sei sicuro di voler eliminare questa immagine?",
     "FileReadCancelled": "Il file letto \u00e8 stato cancellato.",
     "FileNotFound": "File non trovato",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Grazie. La vostra chiave supporter \u00e8 stata rimossa.",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remove User",
     "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "L'operazione viene normalmente eseguita come operazione pianificata. Pu\u00f2 anche essere avviata manualmente da qui. Per configurare le operazioni pianificate, vedi:",
     "HeaderSupporterBenefit": "L'iscrizione come supporter da benefici addizionali, come l'accesso alla sincronizzazione, i plugin premium, canali con contenuto internet, e altro. {0}Scopri di pi\u00f9{1}.",
     "LabelSyncNoTargetsHelp": "Sembra che al momento non avete applicazioni che supportano la sincronizzazione.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Benvenuti nel Dashboard di Media Browser",
-    "HeaderWelcomeToMediaBrowserWebClient": "Benvenuti nel Media Browser Web client",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Fai il tour",
     "HeaderWelcomeBack": "Ben tornato!",
     "TitleSync": "Sincronizza",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Si prega di selezionare almeno un elemento.",
     "MessagePleaseSelectTwoItems": "Seleziona almeno due elementi.",
     "MessageTheFollowingItemsWillBeGrouped": "I seguenti titoli saranno raggruppati in un unico elemento:",
-    "MessageConfirmItemGrouping": "I client Media Browser sceglieranno automaticamente la versione ottimale da riprodurre sulla base del dispositivo e delle prestazioni di rete. Sei sicuro di voler continuare?",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "Riprendi",
     "HeaderMyViews": "Mie viste",
     "HeaderLibraryFolders": "Cartelle dei mediati",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Risultati: {0}",
     "HeaderRestart": "Riavvia",
     "HeaderShutdown": "Spegni",
-    "MessageConfirmRestart": "Sei sicuro di voler riavviare Media Browser Server?",
-    "MessageConfirmShutdown": "Sei sicuro di voler Spegnere Media Browser Server?",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "Aggiorna Adesso",
     "ValueItemCount": "{0} elemento",
     "ValueItemCountPlural": "{0} elementi",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "Canali TV in onda",
     "OptionBlockChannelContent": "Contenuto di Canali Internet",
     "ButtonRevoke": "Revocare",
-    "MessageConfirmRevokeApiKey": "Sei sicuro che desideri revocare le chiavi api? La connessione dell'applicazione con Media Browser sar\u00e0 improvvisamente terminata.",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "Revocare Chiave Api",
     "ValueContainer": "Contenitore: {0}",
     "ValueAudioCodec": "Audio Codec: {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "Questo Plugin deve essere installato dall'app in cui vuoi farlo funzionare",
     "ValuePriceUSD": "Prezzo: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Siete registrati per questa funzione, e sarete in grado di continuare ad usarlo con un abbonamento attivo sostenitore.",
-    "MessageChangeRecurringPlanConfirm": "Dopo aver completato questa operazione \u00e8 necessario cancellare la precedente donazione ricorrente dal tuo conto PayPal. Grazie per il sostegno Media Browser.",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "La tua iscrizione supporter scaduto il {0}.",
-    "MessageYouHaveALifetimeMembership": "Avete un abbonamento sostenitore vita. \u00c8 possibile fornire ulteriori donazioni in una sola volta o in modo ricorrente utilizzando le seguenti opzioni. Grazie per il sostegno Media Browser.",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Si dispone di un attivo {0} appartenenza. \u00c8 possibile aggiornare il vostro piano utilizzando le opzioni di seguito.",
     "ButtonDelete": "Elimina",
-    "HeaderMediaBrowserAccountAdded": "Media Browser utente aggiunto",
-    "MessageMediaBrowserAccountAdded": "Media Browser Account Aggiunto",
-    "MessagePendingMediaBrowserAccountAdded": "L'account Media Browser \u00e8 stato aggiunto a questo utente. Una e-mail sar\u00e0 inviata al proprietario del conto. L'invito dovr\u00e0 essere confermato cliccando su un link all'interno della mail.",
-    "HeaderMediaBrowserAccountRemoved": "Account Media Browser rimosso",
-    "MessageMediaBrowserAccontRemoved": "L'account Media Browser \u00e8 stato rimosso da questo utente.",
-    "TooltipLinkedToMediaBrowserConnect": "Collegato Browser Media Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Non votato",
     "ValueDiscNumber": "Disco {0}",
     "HeaderUnknownDate": "Data Sconosciuta",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Fare clic su Modifica per aprire la gestione dei metadati",
     "WebClientTourPlaylists": "Facile creazione di playlist , e riprodurli su qualsiasi dispositivo",
     "WebClientTourCollections": "Creare collezioni di film di casella di gruppo imposta insieme",
-    "WebClientTourUserPreferences1": "Le preferenze utente consentono di personalizzare il modo in cui la vostra biblioteca si presenta in tutte le applicazioni Media Browser",
-    "WebClientTourUserPreferences2": "Configurare le impostazioni della lingua dei sottotitoli audio e una volta, per ogni Browser media app",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Progettare la home page del client web a proprio piacimento",
     "WebClientTourUserPreferences4": "Configurare fondali, sigle e lettori esterni",
     "WebClientTourMobile1": "Il client web funziona alla grande su smartphone e tablet ...",
-    "WebClientTourMobile2": "e controlla facilmente altri dispositivi e applicazioni Media Browser",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Sincronizza il tuo personal media per i dispositivi per la visualizzazione offline.",
     "MessageEnjoyYourStay": "Godetevi il vostro soggiorno",
     "DashboardTourDashboard": "Il pannello di controllo del server consente di monitorare il vostro server e gli utenti. Potrai sempre sapere chi sta facendo cosa e dove sono.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Installare il plugin come canali internet video, live tv, scanner metadati e altro ancora.",
     "DashboardTourNotifications": "Inviare automaticamente notifiche di eventi server al vostro dispositivo mobile, e-mail e altro ancora.",
     "DashboardTourScheduledTasks": "Gestire facilmente le operazioni di lunga esecuzione con le operazioni pianificate. Decidere quando corrono, e con quale frequenza.",
-    "DashboardTourMobile": "Il cruscotto Media Browser funziona alla grande su smartphone e tablet. Gestisci il tuo server dal palmo della tua mano in qualsiasi momento, ovunque.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Sincronizza il tuo personal media per i dispositivi per la visualizzazione offline.",
     "MessageRefreshQueued": "Aggiornamento programmato",
     "TabDevices": "Dispositivi",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "Sei sicuro di voler cancellare questo dispositivo? Esso riapparir\u00e0 la prossima volta che un utente accede con esso.",
     "LabelEnableCameraUploadFor": "Abilita caricamento macchina fotografica per:",
     "HeaderSelectUploadPath": "Seleziona cartella upload",
-    "LabelEnableCameraUploadForHelp": "Uploads avverr\u00e0 automaticamente in background quando attivato in Media Browser.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "Ora di fine deve essere maggiore del tempo di avvio.",
     "ButtonLibraryAccess": "Accesso biblioteca",
     "ButtonParentalControl": "Controllo parentale",
     "HeaderInvitationSent": "Invito inviato",
     "MessageInvitationSentToUser": "Una e-mail \u00e8 stata inviata a {0}, invitandoli ad accettare l'invito di condivisione.",
-    "MessageInvitationSentToNewUser": "Una e-mail \u00e8 stata inviata a {0} invitandoli a firmare con Media Browser.",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Errore di connessione",
     "MessageUnableToConnectToServer": "Non siamo in grado di connettersi al server selezionato al momento. Per favore assicurati che sia in esecuzione e riprova.",
     "ButtonSelectServer": "Selezionare il server",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "Un pin Invalido o scaduto \u00e8 stato inserito. Riprova.",
     "MessagePasswordResetForUsers": "Le password per i seguenti utenti sono state rimosse:",
     "HeaderInviteGuest": "Invita Ospite",
-    "ButtonLinkMyMediaBrowserAccount": "Collega il mio account",
-    "MessageConnectAccountRequiredToInviteGuest": "Per invitare gli ospiti \u00e8 necessario collegare prima il tuo account browser media a questo server.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Sinc.",
     "SyncMedia": "Sync media",
     "HeaderCancelSyncJob": "Cancel Sync",
