--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrador",
     "Password": "Senha",
     "DeleteImage": "Excluir Imagem",
-    "MessageThankYouForSupporting": "Obrigado por apoiar o Media Browser",
-    "MessagePleaseSupportMediaBrowser": "Por favor, ap\u00f3ie o Media Browser.",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "Deseja realmente excluir esta imagem?",
     "FileReadCancelled": "A leitura do arquivo foi cancelada.",
     "FileNotFound": "Arquivo n\u00e3o encontrado.",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Obrigado. Sua chave de colaborador foi removida.",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
     "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
-    "MessageLinkYourSupporterKey": "Conecte sua chave de colaborador com at\u00e9 {0} membros do Media Browser Connect para desfrutar de acesso livre \u00e0s seguintes apps:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remover Usu\u00e1rio",
     "MessageSwipeDownOnRemoteControl": "Bem vindo ao controle remoto. Deslize para baixo em qualquer lugar desta tela para voltar para o local de onde veio anteriormente.",
     "MessageConfirmRemoveConnectSupporter": "Deseja realmente remover os benef\u00edcios adicionais de colaborador deste usu\u00e1rio?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "Esta opera\u00e7\u00e3o normalmente \u00e9 executada automaticamente como uma tarefa agendada. Tamb\u00e9m pode ser executada manualmente. Para configurar a tarefa agendada, veja:",
     "HeaderSupporterBenefit": "A ades\u00e3o de colaborador fornece benef\u00edcios adicionais como acesso a sincroniza\u00e7\u00e3o, plugins premium, canais de conte\u00fado da internet e mais. {0}Saiba mais{1}.",
     "LabelSyncNoTargetsHelp": "Parece que voc\u00ea n\u00e3o possui nenhuma app que suporta sincroniza\u00e7\u00e3o.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "Bem Vindo ao Painel do Media Browser",
-    "HeaderWelcomeToMediaBrowserWebClient": "Bem-vindo ao Cliente Web do Media Browser",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "Fa\u00e7a o tour",
     "HeaderWelcomeBack": "Bem-vindo novamente!",
     "TitleSync": "Sinc",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "Por favor selecione pelo menos um item.",
     "MessagePleaseSelectTwoItems": "Por favor selecione pelo menos dois itens.",
     "MessageTheFollowingItemsWillBeGrouped": "Os seguintes t\u00edtulos ser\u00e3o agrupados em um \u00fanico item:",
-    "MessageConfirmItemGrouping": "Os clientes do Media Browser escolher\u00e3o automaticamente a vers\u00e3o ideal para reproduzir com base no performance do dispositivo e da rede. Deseja realmente continuar?",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "Retomar",
     "HeaderMyViews": "Minhas Visualiza\u00e7\u00f5es",
     "HeaderLibraryFolders": "Pastas de M\u00eddias",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "Resultado: {0}",
     "HeaderRestart": "Reiniciar",
     "HeaderShutdown": "Desligar",
-    "MessageConfirmRestart": "Deseja realmente reiniciar o Servidor Media Browser?",
-    "MessageConfirmShutdown": "Deseja realmente desligar o Servidor Media Browser?",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "Atualizar Agora",
     "ValueItemCount": "{0} item",
     "ValueItemCountPlural": "{0} itens",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "Canais de TV ao vivo",
     "OptionBlockChannelContent": "Conte\u00fado do Canal de Internet",
     "ButtonRevoke": "Revogar",
-    "MessageConfirmRevokeApiKey": "Deseja realmente revogar esta chave da api? A conex\u00e3o da aplica\u00e7\u00e3o com o Media Browser ser\u00e1 abruptamente encerrada.",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "Revogar Chave da Api",
     "ValueContainer": "Container: {0}",
     "ValueAudioCodec": "Codec de \u00c1udio: {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "Este plugin deve ser instalado de dentro da app em que deseja us\u00e1-lo.",
     "ValuePriceUSD": "Pre\u00e7o: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Voc\u00ea est\u00e1 registrado para este recurso e poder\u00e1 continuar usando-o com uma ades\u00e3o ativa de colaborador.",
-    "MessageChangeRecurringPlanConfirm": "Depois de completar esta transa\u00e7\u00e3o voc\u00ea precisar\u00e1 cancelar sua doa\u00e7\u00e3o recorrente anterior dentro da conta do PayPal. Obrigado por colaborar o Media Browser.",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "Sua ades\u00e3o de colaborador expirou em {0}.",
-    "MessageYouHaveALifetimeMembership": "Voc\u00ea tem uma ades\u00e3o de colaborador vital\u00edcia. Voc\u00ea pode fazer doa\u00e7\u00f5es adicionais em uma \u00fanica vez ou recorrentes usando as op\u00e7\u00f5es abaixo. Obrigado por colaborar com o Media Browser.",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Voc\u00ea tem uma ades\u00e3o {0} ativa. Voc\u00ea pode atualizar seu plano usando as op\u00e7\u00f5es abaixo.",
     "ButtonDelete": "Excluir",
-    "HeaderMediaBrowserAccountAdded": "Conta do Media Browser Adicionada",
-    "MessageMediaBrowserAccountAdded": "A conta do Media Browser foi adicionada para este usu\u00e1rio.",
-    "MessagePendingMediaBrowserAccountAdded": "A conta do Media Browser foi adicionada para este usu\u00e1rio. Um email ser\u00e1 enviado para o dono da conta. O convite precisa ser confirmado, clicando no link dentro do email.",
-    "HeaderMediaBrowserAccountRemoved": "Conta do Media Browser Removida",
-    "MessageMediaBrowserAccontRemoved": "A conta do Media Browser foi removida deste usu\u00e1rio.",
-    "TooltipLinkedToMediaBrowserConnect": "Conectado ao Media Browser Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "N\u00e3o-classificado",
     "ValueDiscNumber": "Disco {0}",
     "HeaderUnknownDate": "Data Desconhecida",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Clique em editar para abrir o gerenciador de metadados",
     "WebClientTourPlaylists": "Crie listas de reprodu\u00e7\u00e3o e mixes instant\u00e2neos e reproduza-os em qualquer dispositivo",
     "WebClientTourCollections": "Crie cole\u00e7\u00f5es de filmes para agrupar colet\u00e2neas",
-    "WebClientTourUserPreferences1": "As prefer\u00eancias do usu\u00e1rio permitem que voc\u00ea personalize como sua biblioteca \u00e9 exibida em qualquer uma das apps do Media Browser",
-    "WebClientTourUserPreferences2": "Configure o idioma de \u00e1udio e legendas apenas uma vez, para todas as apps do Media Browser",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Defina a p\u00e1gina de in\u00edcio do cliente web, do seu gosto",
     "WebClientTourUserPreferences4": "Configure imagens de fundo, m\u00fasicas-tema e reprodutores externos",
     "WebClientTourMobile1": "O cliente web funciona perfeitamente em smartphones e tablets...",
-    "WebClientTourMobile2": "e controle facilmente outros dispositivos e apps do Media Browser",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assisti-la off-line.",
     "MessageEnjoyYourStay": "Divirta-se",
     "DashboardTourDashboard": "O painel do servidor permite monitorar seu servidor e seus usu\u00e1rios. Voc\u00ea sempre poder\u00e1 saber quem est\u00e1 fazendo o qu\u00ea e onde est\u00e3o.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Instale plugins, como os canais de v\u00eddeo de internet, tv ao vivo, rastreadores de metadados e mais.",
     "DashboardTourNotifications": "Envie, automaticamente, notifica\u00e7\u00f5es de eventos do servidor para seus dispositivos m\u00f3veis, email e mais.",
     "DashboardTourScheduledTasks": "Gerencie facilmente opera\u00e7\u00f5es longas com tarefas agendadas. Decida quando executar e com que frequ\u00eancia.",
-    "DashboardTourMobile": "O painel do M\u00e9dia Browser funciona perfeitamente em smartphones e tablets. Gerencie seu servidor da palma de sua m\u00e3o, a qualquer hora e em qualquer lugar.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Sincronize sua m\u00eddia pessoal para seus dispositivos para assisti-la off-line.",
     "MessageRefreshQueued": "Atualiza\u00e7\u00e3o iniciada",
     "TabDevices": "Dispositivos",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "Tem certeza de que deseja excluir este dispositivo? Ele reaparecer\u00e1 a pr\u00f3xima vez que um usu\u00e1rio utiliz\u00e1-lo.",
     "LabelEnableCameraUploadFor": "Habilitar envio atrav\u00e9s de c\u00e2mera para:",
     "HeaderSelectUploadPath": "Selecione o caminho para carga",
-    "LabelEnableCameraUploadForHelp": "Cargas ser\u00e3o executadas automaticamente em retaguarda quando logar no Media Browser.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "O tempo final deve ser maior que o tempo inicial.",
     "ButtonLibraryAccess": "Acesso \u00e0 biblioteca",
     "ButtonParentalControl": "Controle Parental",
     "HeaderInvitationSent": "Convite Enviado",
     "MessageInvitationSentToUser": "Um email foi enviado para {0}, convidando para aceitar seu convite de compartilhamento.",
-    "MessageInvitationSentToNewUser": "Um email foi enviado para {0}, convidando para inscrever-se no Media Browser.",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Falha na Conex\u00e3o",
     "MessageUnableToConnectToServer": "N\u00e3o foi poss\u00edvel conectar ao servidor selecionado. Por favor, certifique-se que esteja sendo executado e tente novamente.",
     "ButtonSelectServer": "Selecionar servidor",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "Foi digitado um c\u00f3digo inv\u00e1lido ou expirado. Por favor, tente novamente.",
     "MessagePasswordResetForUsers": "Foram removidas as senhas dos seguintes usu\u00e1rios:",
     "HeaderInviteGuest": "Convidar Usu\u00e1rio",
-    "ButtonLinkMyMediaBrowserAccount": "Conectar minha conta agora",
-    "MessageConnectAccountRequiredToInviteGuest": "Para convidar usu\u00e1rios voc\u00ea necessita primeiro conectar sua conta Media Browser com este servidor.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Sincronizar",
     "SyncMedia": "Sincronizar M\u00eddia",
     "HeaderCancelSyncJob": "Cancelar Sincroniza\u00e7\u00e3o",
