--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -6,8 +6,8 @@
     "Administrator": "\u7ba1\u7406\u5458",
     "Password": "\u5bc6\u7801",
     "DeleteImage": "\u5220\u9664\u56fe\u50cf",
-    "MessageThankYouForSupporting": "\u611f\u8c22\u60a8\u7684\u652f\u6301 Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "\u8bf7\u652f\u6301 Media Browser.",
+    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
+    "MessagePleaseSupportProject": "Please support Emby.",
     "DeleteImageConfirmation": "\u4f60\u786e\u5b9a\u8981\u5220\u9664\u6b64\u56fe\u50cf\uff1f",
     "FileReadCancelled": "\u6587\u4ef6\u8bfb\u53d6\u5df2\u88ab\u53d6\u6d88\u3002",
     "FileNotFound": "\u672a\u627e\u5230\u6587\u4ef6\u3002",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "\u8c22\u8c22\u3002\u4f60\u7684\u652f\u6301\u8005\u5e8f\u53f7\u5df2\u79fb\u9664\u3002",
     "ErrorLaunchingChromecast": "\u542f\u52a8chromecast\u9047\u5230\u9519\u8bef\uff0c\u8bf7\u786e\u8ba4\u8bbe\u5907\u5df2\u7ecf\u8fde\u63a5\u5230\u4f60\u7684\u65e0\u7ebf\u7f51\u7edc\u3002",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
-    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Media Browser Connect members to enjoy free access to the following apps:",
+    "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remove User",
     "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
@@ -89,8 +89,8 @@
     "ConfirmMessageScheduledTaskButton": "\u6b64\u64cd\u4f5c\u901a\u5e38\u662f\u901a\u8fc7\u8ba1\u5212\u4efb\u52a1\u81ea\u52a8\u8fd0\u884c\u3002\u5b83\u4e5f\u53ef\u624b\u52a8\u8fd0\u884c\u3002\u8981\u914d\u7f6e\u8ba1\u5212\u4efb\u52a1\uff0c\u8bf7\u53c2\u9605\uff1a",
     "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
-    "HeaderWelcomeToMediaBrowserServerDashboard": "\u6b22\u8fce\u6765\u5230Media Browser\u63a7\u5236\u53f0",
-    "HeaderWelcomeToMediaBrowserWebClient": "\u6b22\u8fce\u8fdb\u5165Media Browser Web\u5ba2\u6237\u7aef",
+    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
     "ButtonTakeTheTour": "\u8fdb\u884c\u53c2\u89c2",
     "HeaderWelcomeBack": "\u6b22\u8fce\u56de\u6765\uff01",
     "TitleSync": "\u540c\u6b65",
@@ -192,7 +192,7 @@
     "MessagePleaseSelectOneItem": "\u8bf7\u81f3\u5c11\u9009\u62e9\u4e00\u4e2a\u9879\u76ee\u3002",
     "MessagePleaseSelectTwoItems": "\u8bf7\u81f3\u5c11\u9009\u62e92\u4e2a\u9879\u76ee\u3002",
     "MessageTheFollowingItemsWillBeGrouped": "\u4ee5\u4e0b\u6807\u9898\u5c06\u88ab\u5f52\u5165\u4e00\u4e2a\u9879\u76ee\uff1a",
-    "MessageConfirmItemGrouping": "Media Browser\u5ba2\u6237\u7aef\u4f1a\u57fa\u4e8e\u8bbe\u5907\u548c\u7f51\u7edc\u7684\u6027\u80fd\u81ea\u52a8\u9009\u62e9\u6700\u4f73\u7684\u7248\u672c\u3002\u4f60\u786e\u5b9a\u8981\u7ee7\u7eed\u5417\uff1f",
+    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
     "HeaderResume": "\u6062\u590d\u64ad\u653e",
     "HeaderMyViews": "\u6211\u7684\u754c\u9762",
     "HeaderLibraryFolders": "\u5a92\u4f53\u6587\u4ef6\u5939",
@@ -240,8 +240,8 @@
     "OrganizePatternResult": "\u7ed3\u679c\uff1a {0}",
     "HeaderRestart": "\u91cd\u542f",
     "HeaderShutdown": "\u5173\u673a",
-    "MessageConfirmRestart": "\u4f60\u786e\u5b9a\u5e0c\u671b\u91cd\u542fMedia Browser\u670d\u52a1\u5668\uff1f",
-    "MessageConfirmShutdown": "\u4f60\u786e\u5b9a\u5e0c\u671b\u5173\u95edMedia Browser\u670d\u52a1\u5668\uff1f",
+    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
+    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
     "ButtonUpdateNow": "\u73b0\u5728\u66f4\u65b0",
     "ValueItemCount": "{0} item",
     "ValueItemCountPlural": "{0} items",
@@ -310,7 +310,7 @@
     "OptionBlockLiveTvChannels": "\u7535\u89c6\u76f4\u64ad\u9891\u9053",
     "OptionBlockChannelContent": "\u4e92\u8054\u7f51\u9891\u9053\u5185\u5bb9",
     "ButtonRevoke": "\u64a4\u9500",
-    "MessageConfirmRevokeApiKey": "\u4f60\u786e\u5b9a\u64a4\u9500\u6b64Api \u5bc6\u94a5\uff1f\u8fde\u63a5\u5230Media Browser\u7684\u8be5\u7a0b\u5e8f\u4f1a\u88ab\u7ec8\u6b62\u3002",
+    "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "\u64a4\u9500Api \u5bc6\u94a5",
     "ValueContainer": "\u5a92\u4f53\u8f7d\u4f53\uff1a {0}",
     "ValueAudioCodec": "\u97f3\u9891\u7f16\u89e3\u7801\u5668\uff1a {0}",
@@ -524,17 +524,17 @@
     "MessageInstallPluginFromApp": "\u8fd9\u4e2a\u63d2\u4ef6\u5fc5\u987b\u4ece\u4f60\u6253\u7b97\u4f7f\u7528\u7684\u5e94\u7528\u7a0b\u5e8f\u4e2d\u5b89\u88c5\u3002",
     "ValuePriceUSD": "\u4ef7\u683c\uff1a {0} (\u7f8e\u5143)",
     "MessageFeatureIncludedWithSupporter": "\u60a8\u6ce8\u518c\u4e86\u8be5\u529f\u80fd\uff0c\u6fc0\u6d3b\u7684\u652f\u6301\u8005\u4f1a\u5458\u80fd\u591f\u4e00\u76f4\u4f7f\u7528\u5b83\u3002",
-    "MessageChangeRecurringPlanConfirm": "\u5b8c\u6210\u672c\u6b21\u4ea4\u6613\u540e\uff0c\u60a8\u9700\u8981\u4ece\u60a8\u7684PayPal\u8d26\u6237\u5185\u53d6\u6d88\u5148\u524d\u7684\u7ecf\u5e38\u6027\u6350\u8d60\u3002\u611f\u8c22\u60a8\u652f\u6301Media Browser\u3002",
+    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
     "MessageSupporterMembershipExpiredOn": "\u652f\u6301\u8005\u4f1a\u5458\u5230\u671f\u65e5{0}\u3002",
-    "MessageYouHaveALifetimeMembership": "\u60a8\u5df2\u662f\u7ec8\u751f\u5236\u4f1a\u5458\u3002\u60a8\u53ef\u4ee5\u4f7f\u7528\u4ee5\u4e0b\u201c\u4e00\u6b21\u6027\u6350\u52a9\u201d\u6216\u201c\u7ecf\u5e38\u6027\u6350\u52a9\u201d\u9009\u9879\u6765\u63d0\u4f9b\u989d\u5916\u7684\u6350\u52a9\u3002\u8c22\u8c22\u60a8\u5bf9Media Browser\u7684\u652f\u6301\u3002",
+    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "\u60a8\u662f\u6fc0\u6d3b\u7684{0}\u4f1a\u5458\u3002\u60a8\u53ef\u4ee5\u4f7f\u7528\u4e0b\u9762\u7684\u9009\u9879\u5347\u7ea7\u60a8\u7684\u8ba1\u5212\u3002",
     "ButtonDelete": "\u5220\u9664",
-    "HeaderMediaBrowserAccountAdded": "Media Browser \u8d26\u6237\u5df2\u6dfb\u52a0",
-    "MessageMediaBrowserAccountAdded": "\u6b64\u7528\u6237\u7684Media Browser \u8d26\u6237\u5df2\u6dfb\u52a0\u3002",
-    "MessagePendingMediaBrowserAccountAdded": "\u6b64\u7528\u6237\u7684Media Browser \u8d26\u6237\u5df2\u6dfb\u52a0\u3002\u7535\u5b50\u90ae\u4ef6\u5c06\u88ab\u53d1\u9001\u7ed9\u8be5\u5e10\u6237\u7684\u6240\u6709\u8005\u3002\u9080\u8bf7\u5c06\u9700\u8981\u901a\u8fc7\u70b9\u51fb\u90ae\u4ef6\u5185\u7684\u94fe\u63a5\u6765\u786e\u8ba4\u3002",
-    "HeaderMediaBrowserAccountRemoved": "Media Browser \u8d26\u6237\u5df2\u79fb\u9664",
-    "MessageMediaBrowserAccontRemoved": "\u6b64\u7528\u6237\u7684Media Browser \u8d26\u6237\u5df2\u79fb\u9664\u3002",
-    "TooltipLinkedToMediaBrowserConnect": "\u94fe\u63a5\u5230Media Browser Connect",
+    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
+    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
+    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderUnrated": "Unrated",
     "ValueDiscNumber": "Disc {0}",
     "HeaderUnknownDate": "Unknown Date",
@@ -664,12 +664,12 @@
     "WebClientTourMetadataManager": "Click edit to open the metadata manager",
     "WebClientTourPlaylists": "Easily create playlists and instant mixes, and play them on any device",
     "WebClientTourCollections": "Create movie collections to group box sets together",
-    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Media Browser apps",
-    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Media Browser app",
+    "WebClientTourUserPreferences1": "User preferences allow you to customize the way your library is presented in all of your Emby apps",
+    "WebClientTourUserPreferences2": "Configure your audio and subtitle language settings once, for every Emby app",
     "WebClientTourUserPreferences3": "Design the web client home page to your liking",
     "WebClientTourUserPreferences4": "\u914d\u7f6e\u80cc\u666f\u3001\u4e3b\u9898\u6b4c\u548c\u5916\u90e8\u64ad\u653e\u5668",
     "WebClientTourMobile1": "The web client works great on smartphones and tablets...",
-    "WebClientTourMobile2": "and easily controls other devices and Media Browser apps",
+    "WebClientTourMobile2": "and easily controls other devices and Emby apps",
     "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
     "MessageEnjoyYourStay": "Enjoy your stay",
     "DashboardTourDashboard": "The server dashboard allows you to monitor your server and your users. You'll always know who is doing what and where they are.",
@@ -681,7 +681,7 @@
     "DashboardTourPlugins": "Install plugins such as internet video channels, live tv, metadata scanners, and more.",
     "DashboardTourNotifications": "Automatically send notifications of server events to your mobile device, email and more.",
     "DashboardTourScheduledTasks": "Easily manage long running operations with scheduled tasks. Decide when they run, and how often.",
-    "DashboardTourMobile": "The Media Browser dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
+    "DashboardTourMobile": "The Emby Server dashboard works great on smartphones and tablets. Manage your server from the palm of your hand anytime, anywhere.",
     "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
     "MessageRefreshQueued": "Refresh queued",
     "TabDevices": "\u8bbe\u5907",
@@ -691,13 +691,13 @@
     "DeleteDeviceConfirmation": "Are you sure you wish to delete this device? It will reappear the next time a user signs in with it.",
     "LabelEnableCameraUploadFor": "Enable camera upload for:",
     "HeaderSelectUploadPath": "Select Upload Path",
-    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Media Browser.",
+    "LabelEnableCameraUploadForHelp": "Uploads will occur automatically in the background when signed into Emby.",
     "ErrorMessageStartHourGreaterThanEnd": "End time must be greater than the start time.",
     "ButtonLibraryAccess": "Library access",
     "ButtonParentalControl": "Parental control",
     "HeaderInvitationSent": "Invitation Sent",
     "MessageInvitationSentToUser": "An email has been sent to {0}, inviting them to accept your sharing invitation.",
-    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Media Browser.",
+    "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Connection Failure",
     "MessageUnableToConnectToServer": "We're unable to connect to the selected server right now. Please ensure it is running and try again.",
     "ButtonSelectServer": "Select server",
@@ -714,8 +714,8 @@
     "MessageInvalidForgotPasswordPin": "An invalid or expired pin was entered. Please try again.",
     "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
     "HeaderInviteGuest": "Invite Guest",
-    "ButtonLinkMyMediaBrowserAccount": "Link my account now",
-    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Media Browser account to this server.",
+    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "\u540c\u6b65",
     "SyncMedia": "Sync Media",
     "HeaderCancelSyncJob": "Cancel Sync",
